# fast-vec

./: fast-vec.cabal
