name:                fast-vec
version:             0.1.0.0
synopsis:            Length indexed vectors with identical performance to vector
description:         This package wraps vector with a well typed length and ensures
                     all functions are total.
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Sigma
                     , Data.Vector.Generic.Internal.Sized
                     , Data.Vector.Generic.Sized
                     , Data.Vector.Generic.Mutable.Sized
                     , Data.Vector.Generic.New.Sized
                     , Data.Vector.Unboxed.Instances
                     , Data.Vector.Unboxed.Sized
                     , Data.Vector.Storable.Sized
                     , Data.Vector.Sized
  build-depends:       base       >= 4.9      && < 5.0
                     , fast-nats  >= 0.2.0.0  && < 0.3.0.0
                     , singletons >= 2.3      && < 2.4
                     , vector     > 0.12      && < 0.13
                     , primitive  >= 0.6.1.0  && < 0.6.3.0
  hs-source-dirs:      src
  default-language:    Haskell2010
